# ozon-backen

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOKPLOY_DEPLOYMENT.md  Dockerfile  Dockerfile.prod  QUICKSTART_DOKPLOY.md  README.md  deploy-local.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.serena/: project.yml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  ai.py  health.py  image.py  image_studio.py  ozon.py  ws_progress.py
app/core/: config.py  logger.py  security.py
app/plugins/: base.py  plugin_manager.py
app/plugins/ai/: __init__.py  playground.py
app/plugins/image/: __init__.py  compress.py
app/plugins/ozon/: __init__.py  client.py  download.py  downloader.py  image_push.py
app/resources/: image_studio_config.json
app/services/: ai_processor.py  async_utils.py  http.py  image_studio_engine.py  image_studio_queue.py  image_studio_worker.py  metrics.py  storage.py
config/: plugins.yaml
docs/: FRONTEND_INTEGRATION_GUIDE.md  OZON_DOWNLOAD_INTEGRATION.md  image-studio-architecture.md
docs/plans/: 2025-01-22-image-studio-optimization.md
plans/: 2026-01-17-phase1-foundation-design.md  2026-01-17-python-backend-architecture.md
tests/: conftest.py  test_compress.py
tests/api/v1/: test_ozon.py
tests/integration/: test_batch_workflow.py
tests/plugins/ozon/: test_client.py  test_image_push.py
tests/services/: test_async_utils.py
